force-app/main/default/objects/CI_News_Feedback__c/CI_News_Feedback__c.object-meta.xml
<CustomObject>
    <description>Used to track user feedback (like, dislike, etc) of Factiva news articles</description>
    <label>CI News Feedback</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>CI News Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CI News Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>