force-app/main/default/objects/CI_News_Feedback__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that provided the feedback</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CI_News_Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>